prometheus/alertmanager/alert-deploy-v3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager
  namespace: alertmanager-ns
  labels:
    app: alertmanager

spec:
  replicas: 1
  selector:
    matchLabels:
      app: alertmanager

  template:
    metadata:
      labels:
        app: alertmanager

    spec:
      volumes:
        - name: alertcfg
          configMap:
            name: alert-config

        - name: alerttmpl
          projected:
            sources:
              - configMap:
                  name: alert-template
              - configMap:
                  name: wechat-tmpl

      containers:
        - name: alertmanager
          image: shixiaochuangk8s/alertmanager:v0.31.0
          imagePullPolicy: IfNotPresent

          args:
            - --config.file=/etc/alertmanager/config.yml

          ports:
            - containerPort: 9093
              name: http

          volumeMounts:

            - name: alertcfg
              mountPath: /etc/alertmanager/config.yml
              subPath: config.yml

            # 挂载邮件模板和微信模板
            - name: alerttmpl
              mountPath: /etc/alertmanager/template

          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 100m
              memory: 256Mi
