prometheus/alertmanager/test-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: testalert-ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - my-app
              topologyKey: kubernetes.io/hostname
      containers:
        - name: nginx
          image: shixiaochuangk8s/nginx:1.15-alpine
          ports:
            - containerPort: 80
