prometheus/alertmanager/alert-deploy-v4.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager-headless
  namespace: alertmanager-ns
spec:
  clusterIP: None  # Headless Service
  ports:
    - name: http
      port: 9093
      targetPort: 9093
    - name: cluster
      port: 9094
      targetPort: 9094
  selector:
    app: alertmanager
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: alertmanager
  namespace: alertmanager-ns
spec:
  serviceName: alertmanager-headless
  replicas: 3
  selector:
    matchLabels:
      app: alertmanager
  template:
    metadata:
      labels:
        app: alertmanager
    spec:
      containers:
        - name: alertmanager
          image: shixiaochuangk8s/alertmanager:v0.31.0
          args:
            - --config.file=/etc/alertmanager/config.yml
            - --storage.path=/alertmanager
            - --web.listen-address=:9093
            - --cluster.listen-address=[$(POD_IP)]:9094
            - --cluster.advertise-address=$(POD_IP):9094
            - --cluster.peer=alertmanager-0.alertmanager-headless.alertmanager-ns.svc.cluster.local:9094
            - --cluster.peer=alertmanager-1.alertmanager-headless.alertmanager-ns.svc.cluster.local:9094
            - --cluster.peer=alertmanager-2.alertmanager-headless.alertmanager-ns.svc.cluster.local:9094
          ports:
            - name: http
              containerPort: 9093
            - name: cluster
              containerPort: 9094
          volumeMounts:
            # 主配置文件（单文件挂载，绝不能覆盖目录）
            - name: alertcfg
              mountPath: /etc/alertmanager/config.yml
              subPath: config.yml

            # 邮件模板 + 微信模板（多个 ConfigMap 合并）
            - name: alerttmpl
              mountPath: /etc/alertmanager/template

            # Alertmanager 数据目录
            - name: data
              mountPath: /alertmanager
      volumes:
        # Alertmanager 主配置
        - name: alertcfg
          configMap:
            name:  alert-config

        # 模板（projected，不能拆）
        - name: alerttmpl
          projected:
            sources:
              - configMap:
                  name: alert-template
              - configMap:
                  name: wechat-tmpl
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: nfs-csi
        resources:
          requests:
            storage: 10Gi
