prometheus/alertmanager/alert-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: alertmanager-ns
  labels:
    app: alertmanager
spec:
  selector:
    app: alertmanager
  ports:
    - name: web
      port: 9093
      targetPort: http
